# docs

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  404.html  Dockerfile  README.md  README_EN.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  FUNDING.yaml  dependabot.yaml
.github/workflows/: ci.yaml  pr.yaml
assets/css/: cumbuca.css
codigo-de-conduta/: index.html
contribuindo/: index.html
contribuindo/templates/template-ata-reuniao/: index.html
contribuindo/templates/template-nucleo/: index.html
docs/: codigo-de-conduta.md  index.md
docs/assets/css/: cumbuca.css
docs/contribuindo/: index.md
docs/contribuindo/templates/: template-ata-reuniao.md  template-nucleo.md
search/: search_index.json
theme/: base.html  search.html  searchbox.html
theme/assets/css/: cumbuca.css
theme/modules/: footer.html  header.html  preview.html  sidebar.html
